<resources>
    <string name="app_name">FragmentLifeCycle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_your_details_here">ENTER PRODUCT DETAILS HERE</string>
    <string name="add">Launch Detail Fragment</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="authorized_product_or_not">Authorized Product or Not</string>
    <string name="product_added_successfully">Product Added Successfully</string>
</resources>
