<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LauncherFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin1"
        android:text="@string/enter_your_details_here"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/product_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin2"
        android:autofillHints="name"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        android:minHeight="@dimen/min_height"
        android:textColorHint="#757575"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/product_id_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin2"
        android:autofillHints="name"
        android:hint="@string/product_id"
        android:inputType="number"
        android:minHeight="@dimen/min_height"
        android:textColorHint="#757575"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name_et" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/authorized_tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin2"
        android:text="@string/authorized_product_or_not"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_id_et" />

    <EditText
        android:id="@+id/quantity_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin2"
        android:autofillHints="name"
        android:hint="@string/quantity"
        android:inputType="number"
        android:minHeight="@dimen/min_height"
        android:textColorHint="#757575"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorized_tb" />

    <EditText
        android:id="@+id/price_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin2"
        android:autofillHints="name"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:minHeight="@dimen/min_height"
        android:textColorHint="#757575"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_et" />


    <Button
        android:id="@+id/submit_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_et"

        />


</androidx.constraintlayout.widget.ConstraintLayout>